<resources>
    <string name="app_name">BurbuGebra</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fracciones_l1_name">Nivel 1 - Memoria</string>
    <string name="fracciones_l2_name">NIVEL 2 - Multiplicando</string>
    <string name="fracciones_l3_name">NIVEL 3</string>
    <string name="fracciones_l4_name">NIVEL 4</string>
    <string name="fracciones_l5_name">NIVEL 5</string>
    <string name="fracciones_l6_name">NIVEL 6</string>
    <string name="fracciones_l7_name">NIVEL 7</string>
</resources>
